@@ -1,3 +1,9 @@
+2007-02-10 Sebastien Granjoux <seb.sfo@free.fr>
+
+	* plugins/gdb/debug_tree.c:
+	Use GtkTreeRowReference instead of GtkTreeIter as callback data
+	Fix bug #406113
+
 2007-02-08  Naba Kumar  <naba@gnome.org>
 
 	* plugins/editor/text_editor.h, plugins/editor/text_editor.c:
